# prism-backend

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0001_initial_schema.py  0002_profiles_additive.py  0002_utc_timestamps.py  0003_pricing_templates_v2.py  0003_profiles_backfill.py  0004_endpoint_position.py  0004_profiles_constraints.py  0005_connection_priority_normalization.py  0005_drop_forward_stream_options.py  0006_auth_email_verification.py  0006_rename_connection_description_to_name.py  0007_auth_refresh_session_duration.py  0008_add_loadbalance_events_table.py  0010_webauthn_challenges.py  0012_repair_legacy_integer_pk_sequences.py
app/: AGENTS.md  __main__.py  alembic.ini  dependencies.py  main.py
app/alembic/: AGENTS.md  env.py
app/bootstrap/: AGENTS.md  __init__.py  auth_middleware.py  startup.py
app/core/: AGENTS.md  auth.py  config.py  crypto.py  database.py  migrations.py  time.py  version.py
app/models/: AGENTS.md  models.py
app/routers/: AGENTS.md  audit.py  auth.py  config.py  connections.py  endpoints.py  loadbalance.py  models.py  monitoring.py  pricing_templates.py  profiles.py  providers.py  proxy.py  realtime.py  settings.py  stats.py  vendors.py
app/schemas/: AGENTS.md  (+1 more)
tests/: AGENTS.md  conftest.py  loadbalance_strategy_helpers.py  test_backend_version_metadata.py  test_dependencies.py  test_multi_profile_isolation.py  test_realtime_broadcast.py  test_smoke_defect_regressions.py
(+292 files in other folders)
